<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCartProductBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/game_placeholder" />

    <TextView
        android:id="@+id/item_platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/item_image"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorBlue"
        android:textSize="14sp"
        tools:text="Switch" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_platform"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/item_image"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorGameName"
        android:textSize="16sp"
        tools:text="Super Mario Odyssey" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/item_image"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorBlue"
        android:textSize="20sp"
        tools:text="R$ 197,88" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/item_price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/item_image"
        android:background="@drawable/round_select_box">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/quantity"
            android:textColor="@color/colorGameName"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/remove_quantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_remove_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quantity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:textColor="@color/colorBlue"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_quantity"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_quantity"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>