...

        <Button
                android:id="@+id/btn_game_add_to_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_button"
                android:text="@string/add_to_cart"
                android:textSize="@dimen/app_font_size"
                android:textColor="@android:color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
...
