...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <TextView
        android:id="@+id/purchase_successful_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchase_was_successful"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
...
